--- a/app.wxss
+++ b/app.wxss
@@ -219,3 +219,10 @@ input-holder {
   height: 20px;
   width: 20px;
 }
+.warntext{
+  font-size: 25rpx;
+  color: #898989;
+  margin: 0 auto;
+  width: 80%;
+  margin-top: -20px;
+}
