--- a/pages/index/flightDetail/flightDetail.wxml
+++ b/pages/index/flightDetail/flightDetail.wxml
@@ -37,5 +37,5 @@
 		</view>
 	</view>
 	<button class="sureBtn" bindtap="showCxmodal">添加航班提醒</button>
-	<button class="redbtn" bindtap="seatchFlight">分享我的行程</button>
+	<button class="redbtn" bindtap="seatchFlight" open-type="share">分享我的行程</button>
 </view>
