--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,11 +1,11 @@
 
 <view class="container">
-<loading hidden="{{hiddenLoading}}">正在查询</loading>
+  <loading hidden="{{hiddenLoading}}">正在查询</loading>
   <view class="wrap">
 
     <view class="btn" bindtap="changeBtn">
       <view class="{{currentIndex==0?'active':''}}" data-index="0">按航班号</view>
-  	  <view class="{{currentIndex==1?'active':''}}" data-index="1">按目的地</view>
+      <view class="{{currentIndex==1?'active':''}}" data-index="1">按目的地</view>
     </view>
 
 
@@ -14,65 +14,68 @@
         <view class="smlabeldark from">出发地</view>
         <view class="smlabeldark to">到达地</view>
       </view>
-  		<view class="citySelect">
-  			<view class="startCity destlabel" >{{startCity}}</view>
-  			<view class="citySelect_img">
-  				<image class="samll_plane" src="../../images/cxplan.png"></image>
-  			</view>
-  			<view class="endCity destlabel" bindtap="selectCity">{{endCity}}</view>
-  		</view>
-    </view>
-
-    <view class="chooseCity pd-70" wx:if="{{showInputPanel==true}}">
       <view class="citySelect">
-        <view class="smlabel from">航班号</view>
+       <view class="startCity destlabel" >{{startCity}}</view>
+       <view class="citySelect_img">
+        <image class="samll_plane" src="../../images/cxplan.png"></image>
       </view>
-      <view class="citySelect">
-        <input placeholder="请输入航班号"  bindinput="flightNoInput" type="text" placeholder-style="color:#b2b1b1; font-size:0.9em;" />
-      </view>
+      <view class="endCity destlabel" bindtap="selectCity">{{endCity}}</view>
     </view>
-    <view class="errmsg" hidden="{{ifShowErrmsg}}"><icon type="clear" color="#cf4227" size="10"/>航班号输入错误</view>
+  </view>
 
-    <button class="sureBtn" bindtap="seatchFlight">查询航班</button>
+  <view class="chooseCity pd-70" wx:if="{{showInputPanel==true}}">
+    <view class="citySelect">
+      <view class="smlabel from">航班号</view>
+    </view>
+    <view class="citySelect">
+      <input placeholder="请输入航班号"  bindinput="flightNoInput" type="text" placeholder-style="color:#b2b1b1; font-size:0.9em;" />
+    </view>
+  </view>
+  <view class="errmsg" hidden="{{ifShowErrmsg}}"><icon type="clear" color="#cf4227" size="10"/>航班号输入错误</view>
 
-  <!-- 航班列表 -->
+  <button class="sureBtn" bindtap="seatchFlight">查询航班</button>
   <view class="weui-cells__title">已添加的航班提醒</view>
-  <view wx:if="{{warnFlightLst.length > 0}}">
-  <view class="weui-cells weui-cells_after-title">
-    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-      <view class="weui-cell__hd">
-        <view class="date">2018/3/12</view>
-        <view class="time">8:00</view>
-        <view class="date">西安咸阳</view>
-      </view>
-      <view class="weui-cell__bd ">
-        <view style="width: 6.3rem">
-          <view class="date flight">东方航空MU1234</view>
-          <view class="time">
-            <image src="../../images/cxarrow.png" class="arrow"></image>
+
+
+</view>
+</view>
+  <!-- 航班列表 -->
+  
+  <view class="listContainer" wx:if="{{warnFlightLst.length > 0}}">
+    <view class="weui-cells weui-cells_after-title"  wx:for="{{warnFlightLst}}">
+      <view open-type="switchTab"  class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__hd">
+          <view class="date">{{item.startDate}}</view>
+          <view class="time">{{item.startTime}}</view>
+          <view class="date">{{item.startCity}}</view>
+        </view>
+        <view class="weui-cell__bd " bindtap="goDetail" data-detail = "{{item}}">
+          <view style="width: 5rem">
+            <view class="date flight">{{item.FLIGHT_NO}}</view>
+            <view class="time">
+              <image src="../../../images/cxarrow.png" class="arrow"></image>
+            </view>
+            <view class="date plan">计划起飞</view>
           </view>
-          <view class="date plan">计划起飞</view>
+          <view style="display: flex;flex-direction: column;justify-content:space-between;">
+            <view class="date" style="text-align: right;width: 4.3rem">{{item.endDate}}</view>
+            <view class="time" style="text-align: right;width: 4.3rem">{{item.reachTime}}</view>
+            <view class="date" style="text-align: right;width: 4.3rem">{{item.endCity}}</view>
+          </view>
         </view>
-        <view style="display: flex;flex-direction: column;justify-content:space-between;">
-          <view class="date" style="text-align: right;width: 4.3rem">2018/3/12</view>
-          <view class="time" style="text-align: right;width: 4.3rem">10:23</view>
-          <view class="date" style="text-align: right;width: 4.3rem">北京首都</view>
-        </view>
+        <view >
+          <view class="inner remindme" bindtap="showCxmodal" data-detail = "{{item}}">提醒我</view>
+       <!--   <view class="inner reminding" bindtap="showCxmodal">提醒中</view>
+        <view class="inner reminded" bindtap="showCxmodal">已提醒</view> -->
       </view>
-      <view >
-        <view class="inner">提醒中</view>
-      </view>
-    </navigator>
-  </view>
-  </view>
-  <view class="weui-cells weui-cells_after-title warnpanel" wx:if="{{warnFlightLst.length == 0}}">
-    <view class="warnmsg">
-      <view style="color:#b2b1b1 ">请添加航班信息，机场将免费为您提供</view>
-      <view>1.电话通知登机口变更</view>
-      <view>2.电话通知登机</view>
-      <view>3.短信通知航班延误/取消/...</view>
     </view>
   </view>
-
+</view>
+<view class=" warnpanel listContainer" wx:if="{{warnFlightLst.length == 0}}">
+  <view class="warnmsg">
+    <view style="color:#b2b1b1 ">请添加航班信息，机场将免费为您提供</view>
+    <view>1.电话通知登机口变更</view>
+    <view>2.电话通知登机</view>
+    <view>3.短信通知航班延误/取消/...</view>
   </view>
 </view>
