--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,6 +1,13 @@
 .container {
-  height: 100vh;
+  height: 55vh;
   background: #fff;
+}
+.listContainer{
+  height: 45vh;
+  overflow: scroll;
+}
+.weui-cells:first-child{
+  margin-top: 0;
 }
 
 .pd-70 {
