--- a/pages/switchcity/switchcity.wxml
+++ b/pages/switchcity/switchcity.wxml
@@ -18,22 +18,25 @@
     </block>
     <scroll-view scroll-y="true" style="height:{{winHeight}}px;background: #fff" bindscroll="bindScroll" 
     scroll-into-view="{{scrollTopId}}" scroll-top="{{scrollTop}}">
-<!--     <view class="hotcity-common thisCity">当前选择城市</view>
-    <view class="thisCityName">{{city}}</view> -->
-    <view>
-      <text class="hotcity hotcity-common">热门城市</text>
-      <view class="weui-grids">
-        <block wx:for-items="{{hotcityList}}" wx:key="{{index}}">
-          <view class="weui-grid" data-cityCode="{{item.arpt_iaia}}" data-city="{{item.arpt_brief_c}}" bindtap="bindHotCity" >
-            <view class="weui-grid__label">{{item.arpt_brief_c}}</view>
-          </view>
-        </block>
+    <view wx:if="{{hotcityList || cityList}}">
+      <view>
+        <text class="hotcity hotcity-common">热门城市</text>
+        <view class="weui-grids">
+          <block wx:for-items="{{hotcityList}}" wx:key="{{index}}">
+            <view class="weui-grid" data-cityCode="{{item.arpt_iata}}" data-city="{{item.arpt_brief_c}}" bindtap="bindHotCity" >
+              <view class="weui-grid__label">{{item.arpt_brief_c}}</view>
+            </view>
+          </block>
+        </view>
+      </view>
+      <view class="selection" wx:for="{{cityList}}" wx:key="{{item.initial}}">
+        <view class="item_letter"  id="{{item.initial}}">{{item.initial}}</view>
+        <view class="item_city"  wx:for="{{item.cityInfo}}" wx:for-item="ct" wx:key="{{ct.dest}}" data-cityCode="{{ct.dest}}" data-city="{{ct.arpt_brief_c}}" bindtap="bindCity">
+          {{ct.arpt_brief_c}}
+        </view>
       </view>
     </view>
-    <view class="selection" wx:for="{{cityList}}" wx:key="{{item.initial}}">
-      <view class="item_letter"  id="{{item.initial}}">{{item.initial}}</view>
-      <view class="item_city"  wx:for="{{item.cityInfo}}" wx:for-item="ct" wx:key="{{ct.dest}}" data-cityCode="{{ct.dest}}" data-city="{{ct.arpt_brief_c}}" bindtap="bindCity">
-        {{ct.arpt_brief_c}}
-      </view>
+    <view wx:if="{{hotcityList.length == 0 && cityList.length == 0}}" style="text-align: center;">
+      无城市信息
     </view>
   </scroll-view>
