--- a/pages/myCenter/myCenter.wxml
+++ b/pages/myCenter/myCenter.wxml
@@ -23,7 +23,8 @@
         <view class="weui-cell__bd">航班提醒</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
       </navigator>
-      <navigator url="./complain/complain" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <!-- <navigator url="./complain/complain" class="weui-cell weui-cell_access" hover-class="weui-cell_active"> -->
+      <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">投诉建议</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
       </navigator>
