--- a/pages/index/flightList/flightList.wxml
+++ b/pages/index/flightList/flightList.wxml
@@ -1,6 +1,6 @@
 <!--flightList.wxml-->
 <view class="container">
-        <cxmodal id='cxmodal' flightNo='{{currentFlight.flight_no}}' flight_date='{{currentFlight.startDate}}'>
+        <cxmodal id='cxmodal' bind:refreshFlight="_refreshFlight" flightNo='{{currentFlight.flight_no}}' flight_date='{{currentFlight.startDate}}'>
         </cxmodal>
   <loading hidden="{{hiddenLoading}}">正在查询</loading>
   <view class="weui-cells weui-cells_after-title"  wx:for="{{flightList}}">
